syntax = "proto3";

package degrees.v1;

import "google/api/annotations.proto";

option go_package = "github.com/richardbowden/degrees/internal/pb/degrees/v1;degreesv1";

// ========================================
// Request/Response Messages
// ========================================

message CreateDepositSessionRequest {
  int64 booking_id = 1;
}

message CreateDepositSessionResponse {
  string client_secret = 1;
  int64 deposit_amount = 2;
}

// ========================================
// PaymentService
// ========================================

service PaymentService {
  // Create a Stripe deposit payment session for a booking
  rpc CreateDepositSession(CreateDepositSessionRequest) returns (CreateDepositSessionResponse) {
    option (google.api.http) = {
      post: "/api/v1/checkout/deposit"
      body: "*"
    };
  }
}
